# Triangulation

./: .gitignore  README.md
src/: CMakeLists.txt  build.sh
src/code/: drawing.cpp  drawing.h  main.cpp  random_poly.cpp  random_poly.h  triangulation.cpp  triangulation.h  types.h
